--- a/proj.css
+++ b/proj.css
@@ -41,7 +41,7 @@ body{
 .col-4 {
     background-clip: content-box;
     background-color: #111111;
-    box-shadow: 0 0 0 15px #222222;
+    box-shadow: 0 0 1px 1px #222222;
 }
 
 div {
