--- a/proj.css
+++ b/proj.css
@@ -16,9 +16,21 @@ body{
     }
 }
 
+#title{
+	width:500px;
+	font: 18px Helvetica, sans-serif;
+    font-weight: bold;
+	
+	margin:auto;
+	padding:5px;
+	color:white;
+	text-align: center;
+}
+
 #first-row {
     padding-bottom: 0px;
 }
+
 
 #col1{
     padding-left: 0px;
